--- a/SIH/happyhub/package.json
+++ b/SIH/happyhub/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "firebase": "^12.2.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
