Added login feature

--- a/SIH/happyhub/package.json
+++ b/SIH/happyhub/package.json
@@ -16,6 +16,7 @@
     "firebase": "^12.2.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.13"
